# compass

./: .gitignore  CLAUDE.md  PRD.md  README.md  TASKS.md  TRD.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml
compass/: __init__.py
compass/analysis/: __init__.py  crosstalk.py  energy_balance.py  qe_calculator.py  signal_calculator.py  solver_comparison.py
compass/config/: __init__.py
compass/core/: __init__.py  config_schema.py  types.py  units.py
compass/diagnostics/: __init__.py  stability_diagnostics.py
compass/geometry/: __init__.py  builder.py  pixel_stack.py  sample_pixels.py  vendor_pixels.py
compass/io/: __init__.py  export.py  hdf5_handler.py  result_schema.py
compass/materials/: __init__.py  database.py
compass/optics/: __init__.py  module_optics.py
compass/optimization/: __init__.py  history.py  objectives.py  (+2 more)
configs/: config.yaml
docs/: index.md  package.json
materials/: color_filter_blue.csv  color_filter_green.csv  color_filter_red.csv  si3n4.csv  silicon_green2008.csv  silicon_palik.csv  sio2.csv  tungsten.csv
notebooks/: 01_getting_started.ipynb  01_quick_start.ipynb  02_material_exploration.ipynb  02_structure_visualization.ipynb  03_signal_chain.ipynb  03_solver_comparison.ipynb  04_roi_sweep.ipynb  05_stability_demo.ipynb
scripts/: check_solver_backends.py  compare_solvers.py  convergence_study.py  generate_convergence_report.py  rcwa_fdtd_alignment.py  rcwa_fdtd_pixel_benchmark.py  rcwa_fdtd_trench_benchmark.py  run_simulation.py  validate_rcwa_vs_fdtd.py  visual_cmos_optical_simulation.py
(+444 files in other folders)
